secure web server

--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -166,3 +166,6 @@ extends = odm-t3e-v1, flash_16mb
 
 [env:gs-t3e_16MB]
 extends = odm-t3e-v2, flash_16mb
+board_build.partitions = ./user_setups/esp32/partitions_16MB.csv
+board_build.f_flash = 80000000L
+board_upload.flash_size = 16MB
