--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -15,7 +15,8 @@ no_ps_ram =
 [arduino_esp32s3_v2]
 extends = esp32s3
 framework = arduino
+platform = espressif32@6.4.0
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.01.01/platform-espressif32.zip
-platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.07.00/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.07.00/platform-espressif32.zip
 ;platform = espressif32@5.3.0
 
